# vnpy

./: DEVELOPMENT_ROADMAP.md  simnow_config.json  start_rpc_server.py  start_web.py  test_simnow.py  vnpy_api_reference.md  vnpy_web_design  vnpy_web_design.md  web_trader_setting.json
examples/no_ui/: cta_backtest_demo.py
web/: .gitignore  GUI_GAP_ANALYSIS.md  start.sh
web/backend/: auth.py  bridge.py  config.py  dependencies.py  main.py  pyproject.toml  ws_manager.py
web/backend/routers/: algo.py  analytics.py  backtest.py  data.py  editor.py  logs.py  market.py  ml.py  paper.py  risk.py  settings.py  strategy.py  system.py  trading.py
web/backend/schemas/: __init__.py
web/backend/services/: backtest_runner.py  operation_log.py  pnl_calculator.py  rate_limiter.py  strategy_lock.py
web/backend/tests/: conftest.py  test_algo.py  test_auth.py  test_backtest.py  test_backtest_async.py  test_data.py  test_editor_ml.py  test_market.py  test_ml.py  test_new_apis.py  test_operation_log.py  test_pagination.py  test_rate_limit.py  test_risk.py  test_risk_enhanced.py  test_strategy.py  test_strategy_lock.py  test_system.py  test_trading.py  test_websocket_subscribe.py
web/backend/utils/: __init__.py  pagination.py
web/docs/: DEVELOPMENT_ROADMAP.md
web/frontend/: .env.development  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
web/frontend/e2e/: console-errors.spec.ts  new-features.spec.ts  pages.spec.ts  smoke.spec.ts  websocket.spec.ts
web/frontend/src/: App.tsx
web/frontend/src/api/: api.test.ts  client.ts  index.ts  (+1 more)
(+56 files in other folders)
